# MeetAppSample1

./: .env.example  .gitignore  DOCUMENTATION.md  MeetApp_Audio_Failure_Report.docx  MeetApp_Audio_Investigation_Journal.docx  MeetApp_Developer_Documentation.docx  MeetApp_Technical_Documentation.docx  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  ~$etApp_Audio_Investigation_Journal.docx
.claude/: launch.json
scripts/: analyze-agc.py  make-icon.mjs  measure-echo.py  verify-deepfilter.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: audio_diag.rs
src-tauri/icons/: icon.icns
src-tauri/src/: dotenv.rs  error.rs  events.rs  lib.rs  main.rs  recorder.rs  state.rs  tray.rs
src-tauri/src/audio/: apm.rs  capture.rs  deepfilter.rs  denoise.rs  mod.rs  pipeline.rs  vad.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/core/: library.rs  mod.rs
src-tauri/src/core/ai/: mod.rs
src-tauri/src/core/cloud/: assemblyai.rs  groq.rs  mod.rs
src-tauri/src/core/detection/: mod.rs
src-tauri/src/core/recorder/: mod.rs
src-tauri/src/core/transcription/: mod.rs  whisper.rs
src-tauri/src/models/: meeting.rs  mod.rs  recorder.rs  settings.rs
src-tauri/src/platform/: detect.rs  mod.rs  screen.rs
src-tauri/src/platform/macos/: mod.rs
src-tauri/src/platform/windows/: audio_repair.rs  detect.rs  mod.rs  screen.rs  system_audio.rs  window_titles.rs
src/components/: RecorderStatusPill.tsx  TitleBar.tsx
src/components/ui/: avatar.tsx  badge.tsx  button.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  popover.tsx  switch.tsx  tabs.tsx  tooltip.tsx
src/features/meeting-detail/: ActionItems.tsx  MediaPlayer.tsx  MeetingDetailPage.tsx  Participants.tsx  SummaryView.tsx  TimelineView.tsx  TranscriptView.tsx  Waveform.tsx  usePlayback.ts
src/features/meetings/: MeetingRow.tsx  MeetingsPage.tsx
src/features/panel/: AudioMeter.tsx  DetectionCard.tsx  ModeSelector.tsx  PanelPage.tsx
src/features/settings/: SettingsPage.tsx
src/hooks/: useBackendEvents.ts  useMeetings.ts  useTheme.ts
src/layouts/: MainLayout.tsx
src/lib/: api.ts  media.ts  meta.tsx  query.ts  tauri.ts  utils.ts  window.ts
src/mock/: backend.ts  eventBus.ts  seed.ts
src/stores/: uiStore.ts
src/types/: index.ts
