[package]
name = "meetapp"
version = "0.1.0"
description = "MeetApp — a premium AI meeting assistant for the desktop."
authors = ["MeetApp"]
edition = "2021"
rust-version = "1.77"

[lib]
# The library holds all app logic; `main.rs` is a thin launcher. This layout also
# lets macOS/mobile targets reuse the exact same core later.
name = "meetapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Meeting detection — cross-platform process scanning.
sysinfo = "0.33"

# WAV encoding (used by every capture backend).
hound = "3"

# Microphone capture (fallback / non-Windows).
cpal = { version = "0.15", optional = true }

# AI noise suppression — RNNoise (pure-Rust port, MIT). Default backend;
# a DeepFilterNet backend can be added later behind another feature.
nnnoiseless = { version = "0.5", optional = true }

# Optional native capture backends.
windows-capture = { version = "1", optional = true }
whisper-rs = { version = "0.12", optional = true }

# Blocking HTTP client for the cloud AI APIs (AssemblyAI transcription, Groq
# summarization). rustls TLS + JSON support.
ureq = { version = "2", features = ["json"] }

[target.'cfg(windows)'.dependencies]
# Win32 APIs: window-title enumeration for browser meetings + single-instance,
# and WASAPI for system-audio (speaker/loopback) capture. Loopback is driven
# directly through windows-rs (not the `wasapi` crate) because loopback capture
# must be timer-driven/polling — the `wasapi` crate forces an event callback,
# which is invalid together with AUDCLNT_STREAMFLAGS_LOOPBACK (E_INVALIDARG).
windows = { version = "0.58", features = [
  "implement",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Win32_System_Com",
  "Win32_Media_Audio",
  "Win32_Media_Multimedia",
] }
# The `#[implement]` macro expands to `windows_core::` paths, so windows-core must
# be a direct dependency (same version the umbrella `windows` crate re-exports).
windows-core = "0.58"

# Desktop-only plugins. Uses a Cargo-understood target cfg (not the tauri-only
# `desktop` cfg, which Cargo can't evaluate during dependency resolution).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"

[features]
# The default build uses only reliable, well-supported crates and is fully
# functional: real meeting detection, real microphone recording (WAV), and a
# built-in transcription/summary pipeline. Heavier native backends are opt-in.
default = ["mic-capture", "denoise"]

# Microphone capture via cpal (fallback / non-Windows).
mic-capture = ["dep:cpal"]

# System (loopback) + mic capture is compiled unconditionally on Windows (WASAPI,
# see the `wasapi` windows-target dependency) — no feature flag needed. This
# empty feature is retained only so older build invocations don't break.
system-audio = []

# AI noise suppression (RNNoise). On by default.
denoise = ["dep:nnnoiseless"]

# Screen + video recording on Windows via Windows.Graphics.Capture.
screen-capture = ["dep:windows-capture"]

# Optional on-device transcription via whisper.cpp (offline alternative to the
# cloud AssemblyAI backend; needs a C/C++ toolchain + CMake).
whisper = ["dep:whisper-rs"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
