[package]
name = "meetapp"
version = "0.1.0"
description = "MeetApp — a premium AI meeting assistant for the desktop."
authors = ["MeetApp"]
edition = "2021"
rust-version = "1.77"

[lib]
# The library holds all app logic; `main.rs` is a thin launcher. This layout also
# lets macOS/mobile targets reuse the exact same core later.
name = "meetapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Meeting detection — cross-platform process scanning.
sysinfo = "0.33"

# WAV encoding (used by every capture backend).
hound = "3"


# Microphone + speaker (loopback) capture. 0.16 exposes WASAPI/CoreAudio loopback
# by building an input stream on the default output device.
cpal = "0.16"

# AI noise suppression — RNNoise (pure-Rust port, MIT). Default backend;
# a DeepFilterNet backend can be added later behind another feature.
nnnoiseless = { version = "0.5", optional = true }

# Optional native capture backends.
windows-capture = { version = "1", optional = true }
whisper-rs = { version = "0.12", optional = true }

# WebRTC Audio Processing (AEC + AGC + high-pass) for the mic — behind the `apm`
# feature. Builds a bundled C++ library, so it needs meson + ninja + a C++
# toolchain and a short build path (see the `apm` feature note below). When it
# isn't compiled/available the mic path is unchanged and RNNoise is the fallback.
webrtc-audio-processing = { version = "2", optional = true, features = ["bundled"] }

# Blocking HTTP client for the cloud AI APIs (AssemblyAI transcription, Groq
# summarization). rustls TLS + JSON support.
ureq = { version = "2", features = ["json"] }

[target.'cfg(windows)'.dependencies]
# Win32 APIs: window-title enumeration for browser meetings + single-instance,
# and WASAPI for system-audio (speaker/loopback) capture. Loopback is driven
# directly through windows-rs (not the `wasapi` crate) because loopback capture
# must be timer-driven/polling — the `wasapi` crate forces an event callback,
# which is invalid together with AUDCLNT_STREAMFLAGS_LOOPBACK (E_INVALIDARG).
windows = { version = "0.58", features = [
  "implement",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Win32_System_Com",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_Media_Multimedia",
] }
# The `#[implement]` macro expands to `windows_core::` paths, so windows-core must
# be a direct dependency (same version the umbrella `windows` crate re-exports).
# (Retained for the `audio_diag` example's raw probes; the capture pipeline itself
# no longer hand-rolls WASAPI — see `wasapi` below.)
windows-core = "0.58"

# Desktop-only plugins. Uses a Cargo-understood target cfg (not the tauri-only
# `desktop` cfg, which Cargo can't evaluate during dependency resolution).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"

[features]
# The default build uses only reliable, well-supported crates and is fully
# functional: real meeting detection, real microphone recording (WAV), and a
# built-in transcription/summary pipeline. Heavier native backends are opt-in.
default = ["mic-capture", "denoise", "screen-capture"]

# cpal is now a non-optional dependency; this feature is retained as a no-op so
# older build invocations and the existing `#[cfg(feature = "mic-capture")]`
# gates keep working.
mic-capture = []

# System (loopback) + mic capture is compiled unconditionally on Windows (WASAPI,
# see the `wasapi` windows-target dependency) — no feature flag needed. This
# empty feature is retained only so older build invocations don't break.
system-audio = []

# AI noise suppression (RNNoise). On by default.
denoise = ["dep:nnnoiseless"]

# WebRTC Audio Processing (AEC + AGC + high-pass) on the mic, with the system
# audio as the echo reference. Off by default: it builds a bundled C++ library
# via meson + ninja and needs a short target path on Windows (MAX_PATH). RNNoise
# stays as the noise-suppression pass either way; this only adds mic AEC/AGC/HPF.
# Build with:  cargo build --features apm   (meson + ninja on PATH, MSVC env)
apm = ["dep:webrtc-audio-processing"]

# Screen + video recording on Windows via Windows.Graphics.Capture.
screen-capture = ["dep:windows-capture"]

# Optional on-device transcription via whisper.cpp (offline alternative to the
# cloud AssemblyAI backend; needs a C/C++ toolchain + CMake).
whisper = ["dep:whisper-rs"]

# Optional DeepFilterNet noise-suppression *preprocessing* in front of the
# AssemblyAI transcription pipeline. Off by default so the shipped build is
# unchanged. Adds no Rust dependency: it shells out to the external DeepFilterNet
# CLI (`deep-filter`), exactly like the optional ffmpeg A/V mux, and falls back to
# the original audio whenever the tool is missing or fails. Build with:
#   cargo build --features deepfilter   (needs the `deep-filter` CLI on PATH)
# Runtime knobs: MEETAPP_DEEPFILTER (0/1), MEETAPP_DEEPFILTER_BIN,
# MEETAPP_DEEPFILTER_ARGS. See `src/audio/deepfilter.rs`.
deepfilter = []

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# RNNoise (nnnoiseless) is a neural net run per 10 ms frame; unoptimized it is
# ~15-20x slower, which made the post-recording "Enhancing…" pass on `app:dev`
# (debug) take minutes on long recordings. Optimizing just this one dependency —
# even in dev builds — brings enhancement to near-release speed without slowing
# the rest of the debug build.
[profile.dev.package.nnnoiseless]
opt-level = 3

# The release profile optimizes for size (`opt-level = "s"`), which leaves ~30%
# of RNNoise throughput on the table. Force speed optimization for just this
# compute-bound crate so the shipped app enhances audio as fast as possible
# (~12 s vs ~18 s for a 30-min recording) without bloating the rest of the binary.
[profile.release.package.nnnoiseless]
opt-level = 3
